# gatehook

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PR_DESCRIPTION.md  README.md  ROADMAP.md  build.sh
.github/workflows/: auto-tag.yml  cd-autotag.yml  cd-docker.yml  ci-audit.yml  ci-autotag.yml  ci-docker.yml  ci-rust.yml  ct.yml
src/: lib.rs  main.rs  params.rs  webhook.rs
src/adapters/: channel_info_provider.rs  discord.rs  discord_service.rs  event_response.rs  event_sender.rs  event_sender_trait.rs  http_event_sender.rs  mod.rs  serenity_channel_info_provider.rs  serenity_discord_service.rs
src/bridge/: action_target.rs  discord_text.rs  event_bridge.rs  message_delete_bulk_payload.rs  message_delete_payload.rs  message_filter.rs  message_payload.rs  message_update_payload.rs  mod.rs  reaction_payload.rs  ready_payload.rs  resumed_payload.rs
src/bridge/message_filter/: filter.rs  filterable_message.rs  mod.rs  policy.rs  tests.rs
src/bridge/sender_filter/: filterable_reaction.rs  message_filter.rs  mod.rs  policy.rs  reaction_filter.rs  tests.rs
src/logic/: event_bridge.rs
src/services/: event_sender.rs
tests/: event_bridge_test.rs  serialization_test.rs  webhook_integration_test.rs
tests/adapters/: mock_channel_info.rs  mock_discord.rs  mock_discord_service.rs  mock_event_sender.rs  mock_reaction.rs  mod.rs
