[package]
name = "gatehook"
version = "0.4.3"
authors = ["Atsushi KAWASAKI <ak@xlix.org>"]
description = "Convert events on Discord's Gateway (WebSocket API) to simple Webhook events."
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serenity = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
