[package]
name = "gatehook"
version = "0.9.1"
authors = ["Atsushi KAWASAKI <ak@xlix.org>"]
description = "Bridge Discord Gateway (WebSocket) events to HTTP webhooks"
edition = "2024"
license = "MIT"

[lib]
name = "gatehook"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serenity = "0.12.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5"

[dev-dependencies]
rstest = "0.23"
